# parallel_ddz

./: CMakeLists.txt  CmdParser.h  DataSharing.cpp  DataSharing.h  InputData.cpp  InputData.h  InputParser.cpp  InputParser.h  Sequence.cpp  Sequence.h  SequenceData.h  input.txt  main.cpp  test.sh
